# video-processor

./: Cargo.toml
manager/: Cargo.toml
manager/src/: lib.rs
manager/src/application/: mod.rs  task.rs  worker.rs
manager/src/controller/: mod.rs  mq.rs  worker.rs
manager/src/infrastructure/: mod.rs  progress_reporter.rs  repo_task.rs  task_reporter.rs
manager/src/manager/: aa.rs  bb.rs  cc.rs  mod.rs  parse.rs  transcode.rs
protocol/: Cargo.toml
protocol/src/: handshake.rs  lib.rs  manager_msg.rs  parse.rs  worker_msg.rs
utils/: Cargo.toml
utils/src/: code.rs  id_macro.rs  lib.rs  logger.rs  process.rs
utils/src/db_pools/: keydb.rs  mod.rs  postgres.rs  redis.rs
utils/src/macros/: codec.rs
worker/: Cargo.toml
worker/src/: main.rs
worker/src/worker/: mod.rs  parse.rs
