[workspace]
members = ["manager", "worker"]
exclude = ["utils"]

[workspace.dependencies]
serde = { version = "1.0.188", features = ["derive"] }
anyhow = "1.0.75"
serde_json = "1.0.106"
tokio = { version = "1.32.0", features = ["full"] }
diesel = { version = "2.1.1", features = ["postgres", "chrono"] }
diesel-async = { version = "0.3.2", features = ["deadpool", "postgres"] }
redis = { version = "0.23.2", features = ["tokio", "aio", "tokio-comp"] }

[workspace.dependencies.derive_more]
version = "0.99.17"
default-features = false
features = ["display", "from", "deref", "from_str", "is_variant"]
