[package]
name = "manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
bitflags = { version = "2.4.0", features = ["serde"] }
derive_more.workspace = true
parking_lot = { version = "0.12.1", features = ["hardware-lock-elision"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing = "0.1.37"
typetag = "0.2.13"

[dependencies.utils]
path = "../utils"
features = ["diesel", "codec"]
