[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
bincode = "1.3.3"
derive_more.workspace = true
serde = { workspace = true, features = ["derive"] }
