[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
derive_more.workspace = true
local-ip-address = "0.5.4"
paste = { version = "1.0.14", optional = true }
serde.workspace = true
tokio.workspace = true

[dependencies.redis]
version = "0.23.2"
features = ["tokio", "aio", "tokio-comp"]
optional = true

[dependencies.deadpool-redis]
version = "0.12.0"
optional = true

[dependencies.diesel]
version = "2.1.1"
optional = true
features = ["postgres", "chrono"]

[dependencies.diesel-async]
version = "0.3.2"
optional = true
features = ["deadpool", "postgres"]

[dependencies.flaken]
version = "0.2.2"
optional = true

[features]
default = ["id"]
keydb = ["redis/cluster-async", "redis"]
redis-pool = ["dep:deadpool-redis"]
redis = ["dep:redis"]
code = ["macros"]
macros = ["dep:paste"]
diesel = ["dep:diesel", "dep:diesel-async"]
id = ["dep:flaken"]
