[package]
name = "worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
derive_more.workspace = true
futures = "0.3.28"
pin-project-lite = "0.2.13"
serde.workspace = true
tokio.workspace = true
tracing = "0.1.37"

[dependencies.utils]
path = "../utils"
features = ["codec"]
