[package]
name = "worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-process = "1.7.0"
derive_more.workspace = true
futures = "0.3.28"
paste = "1.0.14"
pin-project-lite = "0.2.13"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing = "0.1.37"
tracing-test = "0.2.4"

[dependencies.utils]
path = "../utils"
features = ["codec"]

[dependencies.protocol]
path = "../protocol"
